--- a/front-end/seekers_navbar.html
+++ b/front-end/seekers_navbar.html
@@ -108,29 +108,29 @@
           >
             <li>
               <a
-                href="#"
+                href="seekers_make_appointment.html"
                 class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
                 aria-current="page"
-                >Make Appointment</a
+                >Make an Appointment</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="seekers_check_availability.html"
                 class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                 >Consultant Availability</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="seekers_appointments.html"
                 class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                 >Your Appointments</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="seekers_contact.html"
                 class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                 >Contact</a
               >
