--- a/front-end/seekers_appointments.html
+++ b/front-end/seekers_appointments.html
@@ -38,6 +38,10 @@
     <div id="includeHtml"></div>
 
     <div style="padding: 60px">
+      <h5 class="text-xl font-bold dark:text-white">
+        Your Appointments
+      </h5>
+      <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
       <table id="example" class="display" style="width: 100%">
         <thead>
           <tr>
