--- a/front-end/seekers_check_availability.html
+++ b/front-end/seekers_check_availability.html
@@ -38,10 +38,16 @@
     <div id="includeHtml"></div>
 
     <div style="padding: 60px">
+      <h5 class="text-xl font-bold dark:text-white">
+        Check Consultants Availability
+      </h5>
+      <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+
       <table id="example" class="display" style="width: 100%">
         <thead>
           <tr>
             <th>Consultant Name</th>
+            <th>Category</th>
             <th>Date</th>
             <th>Time</th>
             <th>Availability</th>
@@ -50,6 +56,7 @@
         </thead>
         <tbody>
           <tr>
+            <td>Edinburgh</td>
             <td>Edinburgh</td>
             <td>2011-04-25</td>
             <td>61</td>
