--- a/front-end/seekers_make_appointment.html
+++ b/front-end/seekers_make_appointment.html
@@ -23,6 +23,10 @@
     <div id="includeHtml"></div>
 
     <div style="padding: 60px">
+      <h5 class="text-xl font-bold dark:text-white">
+        Make an Appointment
+      </h5>
+      <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
       <form>
         <div class="grid gap-6 mb-6 md:grid-cols-2">
           <div>
