--- a/front-end/consultant_navbar.html
+++ b/front-end/consultant_navbar.html
@@ -178,21 +178,21 @@
             <ul id="dropdown-appoinments" class="hidden py-2 space-y-2">
               <li>
                 <a
-                  href="#"
+                  href="consultant_all_appo.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >All Appointments</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="consultant_accept_appo.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Accept Appointments</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="consultant_conform_appo.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Conformed Appointments</a
                 >
@@ -202,7 +202,7 @@
           
           <li>
             <a
-              href="#"
+              href="consultant_update_availability.html"
               class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
             >
               <svg
