--- a/front-end/consultant_all_appo.html
+++ b/front-end/consultant_all_appo.html
@@ -46,18 +46,16 @@
           <thead>
             <tr>
               <th>Appointment No</th>
-              <th>Category</th>
-              <th>Consultant Name</th>
+              <th>Job Seeker Name</th>
               <th>Date</th>
               <th>Time</th>
-              <th>Status</th>
+              <th>Message</th>
               <th>Action</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>0001</td>
-              <td>System Architect</td>
               <td>Edinburgh</td>
               <td>2011-04-25</td>
               <td>61</td>
@@ -65,37 +63,17 @@
               <td>
                 <button
                   type="button"
-                  class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
+                  class="px-3 py-2 text-xs font-medium text-center inline-flex items-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
                 >
-                  <i class="fa-solid fa-pen-to-square"></i>
+                  <i class="fa-solid fa-check"></i>
+                  &nbsp; Acept
                 </button>
                 <button
                   type="button"
-                  class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
+                  class="px-3 py-2 text-xs font-medium text-center inline-flex items-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
                 >
-                  <i class="fa-solid fa-trash"></i>
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td>0002</td>
-              <td>System</td>
-              <td>Edinburgh</td>
-              <td>2011-04-25</td>
-              <td>61</td>
-              <td>Conform</td>
-              <td>
-                <button
-                  type="button"
-                  class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
-                >
-                  <i class="fa-solid fa-pen-to-square"></i>
-                </button>
-                <button
-                  type="button"
-                  class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
-                >
-                  <i class="fa-solid fa-trash"></i>
+                  <i class="fa-solid fa-xmark"></i>
+                  &nbsp; Reject
                 </button>
               </td>
             </tr>
