--- a/front-end/consultant_conform_appo.html
+++ b/front-end/consultant_conform_appo.html
@@ -50,6 +50,7 @@
               <th>Date</th>
               <th>Time</th>
               <th>Message</th>
+              <th>Action</th>
             </tr>
           </thead>
           <tbody>
@@ -59,6 +60,15 @@
               <td>2011-04-25</td>
               <td>61</td>
               <td>dfdsfg</td>
+              <td>
+                <button
+                  type="button"
+                  class="px-3 py-2 text-xs font-medium text-center inline-flex items-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                >
+                  <i class="fa-solid fa-check"></i>
+                  &nbsp; Done
+                </button>
+              </td>
             </tr>
           </tbody>
         </table>
