--- a/front-end/seeker_register.html
+++ b/front-end/seeker_register.html
@@ -25,7 +25,8 @@
     <div style="padding: 60px">
       <h5 class="text-xl font-bold dark:text-white">Register</h5>
       <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
-      <form>
+
+      <form action="/RegisterSeeker" method="post">
         <div class="grid gap-6 mb-6 md:grid-cols-2">
           <div>
             <label
