--- a/front-end/seeker_register.html
+++ b/front-end/seeker_register.html
@@ -26,7 +26,16 @@
       <h5 class="text-xl font-bold dark:text-white">Register</h5>
       <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
 
-      <form action="/RegisterSeeker" method="post">
+      <form
+        onsubmit="event.preventDefault(); seeker_register(
+            this.first_name.value,
+            this.last_name.value,
+            this.mobile_no.value,
+            this.email.value,
+            this.age.value,
+            this.username.value,
+            this.password.value);"
+      >
         <div class="grid gap-6 mb-6 md:grid-cols-2">
           <div>
             <label
@@ -37,6 +46,7 @@
             <input
               type="text"
               id="first_name"
+              name="first_name"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               placeholder="John"
               required
@@ -51,6 +61,7 @@
             <input
               type="text"
               id="last_name"
+              name="last_name"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               placeholder="Doe"
               required
@@ -58,16 +69,17 @@
           </div>
           <div>
             <label
-              for="phone"
+              for="mobile_no"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
               >Phone Number</label
             >
             <input
               type="tel"
-              id="phone"
+              id="mobile_no"
+              name="mobile_no"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="123-45-678"
-              pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+              placeholder="0123456789"
+              pattern="[0-9]{10}"
               required
             />
           </div>
@@ -80,6 +92,7 @@
             <input
               type="email"
               id="email"
+              name="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               placeholder="john.doe@company.com"
               required
@@ -94,6 +107,7 @@
             <input
               type="number"
               id="age"
+              name="age"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               required
             />
@@ -107,6 +121,7 @@
             <input
               type="text"
               id="username"
+              name="username"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               required
             />
@@ -120,6 +135,7 @@
             <input
               type="password"
               id="password"
+              name="password"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               required
             />
@@ -149,6 +165,44 @@
         </button>
       </form>
     </div>
+
+    <script>
+      function seeker_register(
+        first_name,
+        last_name,
+        mobile_no,
+        email,
+        age,
+        username,
+        password
+      ) {
+        fetch("http://localhost:8080/RegisterSeeker", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            first_name,
+            last_name,
+            mobile_no,
+            email,
+            age,
+            username,
+            password,
+          }),
+        })
+          .then((response) => {
+            if (response.ok) {
+              alert("successful!");
+            } else {
+              alert("failed!");
+            }
+          })
+          .catch((error) => {
+            alert("Error: " + error);
+          });
+      }
+    </script>
 
     <script>
       var password = document.getElementById("password"),
