--- a/front-end/seekers_make_appointment.html
+++ b/front-end/seekers_make_appointment.html
@@ -25,7 +25,8 @@
     <div style="padding: 60px">
       <h5 class="text-xl font-bold dark:text-white">Make an Appointment</h5>
       <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
-      <form>
+
+      <form onsubmit="event.preventDefault(); ">
         <div class="grid gap-6 mb-6 md:grid-cols-2">
           <div>
             <label
@@ -53,6 +54,7 @@
                 datepicker
                 datepicker-autohide
                 id="datepicker"
+                name="date"
                 type="text"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 placeholder="Select date"
@@ -61,12 +63,13 @@
           </div>
           <div>
             <label
-              for="countries"
+              for="category"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
               >Appointment Category</label
             >
             <select
-              id="countries"
+              id="category"
+              name="category"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             >
               <option selected>Choose a category</option>
@@ -86,6 +89,7 @@
           >
           <select
             id="consultants"
+            name="consultants"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           >
             <option selected>Choose a consultant</option>
@@ -103,6 +107,7 @@
           >
           <textarea
             id="message"
+            name="message"
             rows="4"
             class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             placeholder="Write your thoughts here..."
