--- a/front-end/seekers_check_availability.html
+++ b/front-end/seekers_check_availability.html
@@ -46,6 +46,7 @@
       <table id="example" class="display" style="width: 100%">
         <thead>
           <tr>
+            <th>Consultant ID</th>
             <th>Consultant Name</th>
             <th>Category</th>
             <th>Date</th>
@@ -56,6 +57,7 @@
         </thead>
         <tbody>
           <tr>
+            <td>1</td>
             <td>Edinburgh</td>
             <td>Edinburgh</td>
             <td>2011-04-25</td>
