--- a/front-end/seekers_make_appointment.html
+++ b/front-end/seekers_make_appointment.html
@@ -31,8 +31,8 @@
         this.date.value,
         this.time.value,
         this.category.value,
-        this.consultant_id.value,
-        this.seeker_id.value,
+        this.consultantId.value,
+        this.seekerId.value,
         this.message.value,
         this.status.value);"
       >
@@ -40,16 +40,16 @@
           <input
             type="text"
             id="seekerId"
-            name="seeker_id"
+            name="seekerId"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           />
         </div>
         <div class="mb-6">
           <input
             type="text"
-            id="consultant_id"
-            name="consultant_id"
-            placeholder="consultant_id"
+            id="consultantId"
+            name="consultantId"
+            placeholder="consultantId"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           />
         </div>
@@ -146,8 +146,8 @@
         date,
         time,
         category,
-        consultant_id,
-        seeker_id,
+        consultantId,
+        seekerId,
         message,
         status
       ) {
@@ -160,8 +160,8 @@
             date,
             time,
             category,
-            consultant_id,
-            seeker_id,
+            consultantId,
+            seekerId,
             message,
             status,
           }),
