--- a/front-end/seekers_appointments.html
+++ b/front-end/seekers_appointments.html
@@ -33,14 +33,62 @@
         $("#example").DataTable();
       });
     </script>
+
+    <script>
+      seekerId = sessionStorage.getItem("seeker_id");
+      fetch(`http://localhost:8080/Appointments/${seekerId}`)
+        .then((response) => response.json())
+        .then((data) => {
+          const tableBody = document.querySelector("#example tbody");
+          data.forEach((element) => {
+            const row = document.createElement("tr");
+            const appointmentId = document.createElement("td");
+            const category = document.createElement("td");
+            const consultant_name = document.createElement("td");
+            const date = document.createElement("td");
+            const time = document.createElement("td");
+            const status = document.createElement("td");
+            const action = document.createElement("td");
+            const actionButton = document.createElement("button");
+
+            appointmentId.textContent = element.appointmentId;
+            
+            consultantId = element.consultantId;
+            fetch(`http://localhost:8080/Consultant/${consultantId}`)
+              .then((response1) => response1.json())
+              .then((data1) => {
+                category.textContent = data1.category;
+                consultant_name.textContent = data1.consultantFirstName;
+              });
+
+            date.textContent = element.date;
+            time.textContent = element.time;
+            status.textContent = element.status;
+            actionButton.textContent = "Cancel Appointment";
+            actionButton.setAttribute("appointmentId", element.appointmentId);
+
+            action.appendChild(actionButton);
+
+            row.appendChild(appointmentId);
+            row.appendChild(category);
+            row.appendChild(consultant_name);
+            row.appendChild(date);
+            row.appendChild(time);
+            row.appendChild(status);
+
+            tableBody.appendChild(row);
+          });
+        })
+        .catch((error) => {
+          console.error("Error fetching data:", error);
+        });
+    </script>
   </head>
   <body>
     <div id="includeHtml"></div>
 
     <div style="padding: 60px">
-      <h5 class="text-xl font-bold dark:text-white">
-        Your Appointments
-      </h5>
+      <h5 class="text-xl font-bold dark:text-white">Your Appointments</h5>
       <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
       <table id="example" class="display" style="width: 100%">
         <thead>
@@ -55,50 +103,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>0001</td>
-            <td>System Architect</td>
-            <td>Edinburgh</td>
-            <td>2011-04-25</td>
-            <td>61</td>
-            <td>Pending</td>
-            <td>
-              <button
-                type="button"
-                class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
-              >
-                <i class="fa-solid fa-pen-to-square"></i>
-              </button>
-              <button
-                type="button"
-                class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
-              >
-                <i class="fa-solid fa-trash"></i>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <td>0002</td>
-            <td>System</td>
-            <td>Edinburgh</td>
-            <td>2011-04-25</td>
-            <td>61</td>
-            <td>Conform</td>
-            <td>
-              <button
-                type="button"
-                class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
-              >
-                <i class="fa-solid fa-pen-to-square"></i>
-              </button>
-              <button
-                type="button"
-                class="text-blue-700 border border-blue-700 hover:bg-blue-700 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center mr-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500"
-              >
-                <i class="fa-solid fa-trash"></i>
-              </button>
-            </td>
-          </tr>
+          <tr></tr>
         </tbody>
       </table>
     </div>
