--- a/front-end/seekers_appointments.html
+++ b/front-end/seekers_appointments.html
@@ -75,6 +75,7 @@
             row.appendChild(date);
             row.appendChild(time);
             row.appendChild(status);
+            row.appendChild(action);
 
             tableBody.appendChild(row);
           });
