--- a/front-end/seeker_login.html
+++ b/front-end/seeker_login.html
@@ -58,7 +58,7 @@
           class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
           style="width: 100%"
         >
-          Register
+          Login
         </button>
       </form>
     </div>
@@ -83,8 +83,8 @@
               alert("Login failed!");
             }
           })
-          .then((seekeId) => {
-            sessionStorage.setItem("seeker_id", seekeId);
+          .then((seekerId) => {
+            sessionStorage.setItem("seeker_id", seekerId);
             window.location.href = "seekers_home.html";
           })
           .catch((error) => {
