--- a/front-end/admin_navbar.html
+++ b/front-end/admin_navbar.html
@@ -178,21 +178,21 @@
             <ul id="dropdown-appoinments" class="hidden py-2 space-y-2">
               <li>
                 <a
-                  href="#"
+                  href="admin_all_appo.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >All Appointments</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="admin_accept_appo.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Accept Appointments</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="admin_complete_appo.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Complete Appointments</a
                 >
