--- a/front-end/admin_all_appo.html
+++ b/front-end/admin_all_appo.html
@@ -25,7 +25,7 @@
 
     <script>
       $(function () {
-        $("#includeHtml").load("consultant_navbar.html");
+        $("#includeHtml").load("admin_navbar.html");
       });
     </script>
     <script>
