--- a/front-end/admin_navbar.html
+++ b/front-end/admin_navbar.html
@@ -48,7 +48,7 @@
               />
               <span
                 class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
-                >Flowbite</span
+                >Flowbite - ADMIN</span
               >
             </a>
           </div>
