--- a/front-end/admin_all_consultant.html
+++ b/front-end/admin_all_consultant.html
@@ -52,8 +52,8 @@
             const actionButton_delete = document.createElement("button");
 
             consultantId.textContent = element.consultantId;
-            consultant_first_name.textContent = element.consultantFirstName;
-            consultant_last_name.textContent = element.consultantLastName;
+            consultant_first_name.textContent = element.firstName;
+            consultant_last_name.textContent = element.lastName;
             category.textContent = element.category;
             email.textContent = element.email;
             phone_no.textContent = element.phoneNo;
